Fixed improper alignment of "Remove Author" button on Books Management page.
Now the button is horizontally and vertically centered.

--- a/OnlineLibrary/OnlineLibrary.Web/Content/Views stylesheets/BooksManagement/CreateEdit.css
+++ b/OnlineLibrary/OnlineLibrary.Web/Content/Views stylesheets/BooksManagement/CreateEdit.css
@@ -2,8 +2,9 @@
     visibility : hidden;
 }
 
-.hidden {
-    visibility : hidden;
+#tdRemoveAuthorButton {
+    vertical-align: middle;
+    text-align: center;
 }
 
 #bookAuthors .book-author { margin-bottom: 10px; }
